Add StatusEventEnum and integrate event status in Event model and database migration